<?xml version="1.0"?>
<package format="2">
  <name>leo_teleop</name>
  <version>0.0.0</version>
  <description>Teleop package for Leo Rover</description>

  <maintainer email="blazej@turtlerover.com">Błażej Sowa</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

</package>
